--- a/fhevm-hardhat-template/package.json
+++ b/fhevm-hardhat-template/package.json
@@ -27,6 +27,7 @@
     "encrypted-types": "^0.0.4",
     "@fhevm/solidity": "^0.9.1"
   },
+  "_comment": "Updated FHEVM dependencies for better compatibility",
   "devDependencies": {
     "@fhevm/hardhat-plugin": "^0.3.0-1",
     "@nomicfoundation/hardhat-chai-matchers": "^2.1.0",
